New release 1.11.1